--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="row align-items-center">
     <div class="col-sm-12 col-md-6">
-    <a href='pressIt.html'><button class="btn btn-block btn-primary">Press It!</button></a>
+    <a href='pressit.html'><button class="btn btn-block btn-primary">Press It!</button></a>
     </div>
     <div class="col-sm-12 col-md-6">
       <p>This is a simple memory game that is 4 tiles that will light up in sequence and you have to click them in the correct sequence.
