Change index to display the privacy policy

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <p>Thank you for checking out the portfolio! Below you will find links to most of the public work that I have available. This collection is constantly changing so make sure that you check back to see all the new
     projects that are happening. </p>
     <div class="row align-items-center">
+      <div class="col-sm-12 col-md-6">
+        <a href=''><button class="btn btn-block btn-secondary disabled">Expenser</button></a>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <p>This will be a simple expense app that will allow you to put in the income and the expenses in as few clicks as possible. Right now it is in internal testing on the play store but may be fully released
+          once the storage database has been fully flushed out. Right now it is just storing each transaction as a serialized object which leads to difficulty when performing any sort of upgrade on the class definition.
+        </div>
+      </div>
+    <div class="row align-items-center">
     <div class="col-sm-12 col-md-6">
     <a href='calltimer.html'><button class="btn btn-block btn-primary">Timer</button></a>
     </div>
@@ -32,5 +41,10 @@
     </div>
     </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <span class="text">Our<a href='privacy.html'> Privacy Policy</a> Goes into how we take care of your data here.</span>
+      </div>
+    </footer>
   </body>
 </html>
