Add link to app, update description

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     projects that are happening. </p>
     <div class="row align-items-center">
       <div class="col-sm-12 col-md-6">
-        <a href=''><button class="btn btn-block btn-secondary disabled">Expenser</button></a>
+        <a href='https://play.google.com/store/apps/details?id=com.rivervandevelopment.simpletrans'><button class="btn btn-block btn-primary">Expenser</button></a>
       </div>
       <div class="col-sm-12 col-md-6">
-        <p>This will be a simple expense app that will allow you to put in the income and the expenses in as few clicks as possible. Right now it is in internal testing on the play store but may be fully released
-          once the storage database has been fully flushed out. Right now it is just storing each transaction as a serialized object which leads to difficulty when performing any sort of upgrade on the class definition.
+        <p>This is a simple expense app that allows you to put in your income and expenses in as few clicks as possible. It uses the Room library for database access. It is a stable 
+          release on the play store, but is still in active development, with a widget feature soon to be added.
         </div>
       </div>
     <div class="row align-items-center">
